--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.5",
+    "sequelize-auto": "^0.4.29",
+    "sequelize-cli": "^5.5.1"
   }
 }
