--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "sequelize": "^5.21.5",
     "sequelize-auto": "^0.4.29",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
