--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "rate-limiter-flexible": "^2.0.0",
     "sequelize": "^5.21.5",
     "sequelize-auto": "^0.4.29",
     "sequelize-cli": "^5.5.1"
