--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "rate-limiter-flexible": "^2.0.0",
     "sequelize": "^5.21.5",
     "sequelize-auto": "^0.4.29",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "stripe": "^8.29.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
